# volo8_test

./: .gitignore  API_DOCS.md  ARCHITECTURE.md  COMMANDS.md  DESIGN_DOCS.md  README.md  TEST_DOCS.md  lock_detection.db  main.py  manage.py  manage_simple.py  openapi.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/: commands.py  database.py  detech.py  dingtalk.py  lock_detector.py  train_commands.py  trainer.py  webhook_service.py
datasets/lock_detech/: dataset.yaml  train.cache  val.cache
datasets/lock_detech/train/: locked.cache
datasets/lock_detech/val/: locked.cache
frontend/: index.html  test.html
frontend/css/: style.css
frontend/js/: api.js  ui.js
models/lock_classifier/: args.yaml  results.csv
models/lock_classifier/weights/: best.pt  last.pt
models/lock_detector/: args.yaml  results.csv
tests/: test_api.py  test_database.py  test_dingtalk.py  test_integration.py  test_lock_detector.py  test_trainer.py
