[project]
name = "lock-detech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "ultralytics>=8.3.192",
    "uvicorn>=0.35.0",
]
